--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,8 +2,7 @@
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 
 body {
-  background-color: antiquewhite;
-  color: brown;
-  text-align: center;
-  margin-top: 100px;
+  background-color: rgb(255, 255, 255);
+  font-family: 'Montserrat';
+  color: #233d4d;
 }
