--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,3 +6,129 @@ body {
   font-family: 'Montserrat';
   color: #233d4d;
 }
+
+h1 {
+  font-family: 'Abril Fatface';
+  font-size: 32px;
+  letter-spacing: .045em;
+  /* border-bottom: 3px solid #C9E4CA; */
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 45px 15px 35px;
+  background-color: #a4c3b2;
+}
+
+#navLinks {
+  list-style: none;
+  text-transform: lowercase;
+  display: flex;
+}
+
+ul a {
+  display: block;
+  padding: 1em;
+}
+
+#projectsPage {
+  padding: 0px 75px;
+  margin: 0px 55px 50px 55px;
+}
+
+#projectsContainer{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+}
+
+.projectCard {
+  border: 2px solid black;
+  // padding: 5px 10px 15px 10px;
+  // margin: 25px;
+  margin: 5px;
+  text-align: center;
+  width: 375px;
+  height: 350px;
+  background-size: cover;
+  background-position: center;
+}
+
+.projectImage {
+  width: 500px;
+  height: 500px;
+  background-size: cover;
+  background-position: center;
+  // border: 1px solid #46433e;
+  // background-size: cover;
+  // background-position: center;
+  // background-repeat: no-repeat;
+  // position: relative;
+}
+
+h2 {
+  font-family: 'Abril Fatface';
+  font-size: 48px;
+  letter-spacing: .045em;
+  text-align: center;
+  margin: 25px;
+}
+
+.title {
+  margin-bottom: 10px;
+}
+
+.bio {
+  width: 800px;
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.5em;
+  margin: auto;
+}
+
+.technology {
+  // margin-top: 150px;
+}
+
+.tools {
+  text-align: center;
+  font-size: 24px;
+}
+
+.my-work {
+  // margin-top: 150px;
+}
+
+h3 {
+  font-family: 'Abril Fatface';
+  font-size: 32px;
+  letter-spacing: .045em;
+  text-align: center;
+}
+
+#project-image {
+  display: inline-block;
+}
+
+img {
+  width: 100px;
+  height: 100px;
+}
+
+footer {
+  background-color: #a4c3b2;
+  padding: 25px;
+}
+
+.contact-info {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
+li {
+  list-style: none;
+  margin: 0px 25px;
+}
