redo card styling

--- a/src/styles/components/_projectCards.scss
+++ b/src/styles/components/_projectCards.scss
@@ -1,36 +1,46 @@
 #projectsPage {
-    padding: 0px 75px;
-    // margin: 0px 55px 50px 55px;
-  }
-  
-  #projectsContainer{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-  }
-  
-  .projectCard {
-    border: 2px solid black;
-    padding: 5px 10px;
-    // margin: 25px;
-    margin: 5px;
-    text-align: center;
-    width: 375px;
-    height: auto;
-    background-size: cover;
-    background-position: center;
-  }
-  
-  .projectImage {
-    width: 225px;
-    height: 200px;
-    margin: auto;
-    margin-bottom: 15px;
-    background-size: cover;
-    background-position: center;
-    // border: 1px solid #46433e;
-    // background-size: cover;
-    // background-position: center;
-    // background-repeat: no-repeat;
-    // position: relative;
-  }
+  padding: 0px 75px;
+  // margin: 0px 55px 50px 55px;
+}
+
+#projectsContainer {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+}
+
+.projectCard {
+  border: 2px solid black;
+  padding: 5px 10px;
+  // margin: 25px;
+  margin: 5px;
+  text-align: center;
+  width: 375px;
+  height: auto;
+  background-size: cover;
+  background-position: center;
+}
+
+.projectImage {
+  width: 225px;
+  height: 200px;
+  margin: auto;
+  margin-bottom: 15px;
+  background-size: cover;
+  background-position: center;
+  // border: 1px solid #46433e;
+  // background-size: cover;
+  // background-position: center;
+  // background-repeat: no-repeat;
+  // position: relative;
+}
+
+.project-card {
+  width: 400px;
+  height: 330px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border: 1px solid white;
+ margin-bottom: 50px;
+}
