send user to new tab when visiting site url

--- a/src/styles/components/_projectCards.scss
+++ b/src/styles/components/_projectCards.scss
@@ -102,6 +102,11 @@
   background-color: #ffffff83;
 }
 
+a:hover {
+  text-decoration: none;
+  color: white;
+}
+
 // #projectsContainer {
 //   display: flex;
 //   flex-flow: row wrap;
