--- a/src/styles/components/_projectCards.scss
+++ b/src/styles/components/_projectCards.scss
@@ -16,6 +16,7 @@
   // justify-content: center;
   // background-size: cover;
   // background-position: center;
+  // 556 x 313
   width: 375px;
   height: 300px;
   background-repeat: no-repeat;
