--- a/src/styles/components/_projectCards.scss
+++ b/src/styles/components/_projectCards.scss
@@ -17,8 +17,8 @@
   // background-size: cover;
   // background-position: center;
   // 556 x 313
-  width: 375px;
-  height: 300px;
+  width: 556px;
+  height: 313px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -38,7 +38,7 @@
   align-items: flex-end;
   text-align: center;
   // box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
-  // transition: 0.5s ease-in-out;
+  transition: 0.5s ease-out;
 }
 
 .project-card:before {
@@ -51,7 +51,7 @@
   height: 100%;
   background: linear-gradient(to bottom, rgbe(0,176,155,0.5), rgbe(150,201,61,1));
   z-index: 2;
-  // transition: 0.5s all;
+  transition: 0.5s all;
   opacity: 0;
 }
 
@@ -65,14 +65,13 @@
   z-index: 3;
   color: white;
   opacity: 0;
-  // transform: translateY(30px);
   // transition: 05s all;
 }
 
 .project-card:hover .hover-content {
   margin: auto;
   opacity: 1;
-  // transform: translateY(0px);
+  transform: translateY(0px);
 }
 
 // .project-btn-container {
