--- a/src/styles/components/_projectCards.scss
+++ b/src/styles/components/_projectCards.scss
@@ -17,13 +17,14 @@
   // background-size: cover;
   // background-position: center;
   // 556 x 313
-  width: 556px;
-  height: 313px;
+  width: 375px;
+  height: 215px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  border: 1px solid white;
+  border: 1px solid #203544;
   margin-bottom: 50px;
+  margin: 25px;
 }
 
 .project-card { 
