--- a/src/styles/components/_projectsPage.scss
+++ b/src/styles/components/_projectsPage.scss
@@ -2,8 +2,8 @@
   margin: auto;
   margin-bottom: 75px;
   padding-top: 75px;
-  background-color: #9ABBA9;
-  box-shadow: #203544 20px 20px;
-  border-radius: 150px 0px 0px 0px;
+  // background-color: #9ABBA9;
+  // box-shadow: #203544 20px 20px;
+  // border-radius: 150px 0px 0px 0px;
   width: 100%;
 }
