try to fix image bug in deployed site- img not showing up

--- a/src/styles/globals/_variables.scss
+++ b/src/styles/globals/_variables.scss
@@ -1,6 +1,11 @@
 $primary1: #a4c3b2;
 $primary2: #203544;
 $accent: #FFFFFF;
+$primary-color: #FFFFFF;
+$secondary-color: #E7D9C2;
+$accent-color: #DBA7A2;
 
 $primaryFont: 'Abril Fatface';
 $secondaryFont: 'Montserrat';
+
+$primary-text-color: #071E22;
